--- a/Week 1-2 - general intro to exploratory modelling/assignment 1 - tutorial.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/assignment 1 - tutorial.ipynb
@@ -63,7 +63,9 @@
     "    ret = odeint(deriv, y0, t, args=(N, beta, gamma))\n",
     "    S, I, R = ret.T\n",
     "    \n",
-    "    return S, I, R"
+    "    return S, I, R\n",
+    "\n",
+    "print(SIR_model())"
    ]
   },
   {
