Update assignment 2 - lakemodel.ipynb
short answer to first part of Q4

--- a/Week 1-2 - general intro to exploratory modelling/assignment 2 - lakemodel.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/assignment 2 - lakemodel.ipynb
@@ -414,6 +414,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluators are used to distribute experiments either over multiple cores on a single machine, or over a cluster using ipyparallel.\n",
+    "- the multiprocessing module allows the programmer to fully leverage multiple processors on a given machine\n",
+    "- the ipyparallel is used for cluster computing and analysis over several machines"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
