Update assignment 3 - multimodel_assignment.ipynb
attempting to fix plotting issue in last section.

--- a/Week 1-2 - general intro to exploratory modelling/assignment 3 - multimodel_assignment.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/assignment 3 - multimodel_assignment.ipynb
@@ -37,13 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "C:\\Users\\supriya.kr09\\anaconda33\\lib\\site-packages\\ema_workbench\\em_framework\\optimization.py:48: ImportWarning: platypus based optimization not available\n  warnings.warn(\"platypus based optimization not available\", ImportWarning)\nC:\\Users\\supriya.kr09\\anaconda33\\lib\\site-packages\\ema_workbench\\connectors\\__init__.py:17: ImportWarning: vensim connector not available\n  warnings.warn(\"vensim connector not available\", ImportWarning)\nC:\\Users\\supriya.kr09\\anaconda33\\lib\\site-packages\\ema_workbench\\analysis\\prim.py:31: ImportWarning: altair based interactive inspection not available\n  \"inspection not available\"), ImportWarning)\n"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -88,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,9 +216,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": "[MainProcess/INFO] performing 50 scenarios * 1 policies * 1 model(s) = 50 experiments\n[MainProcess/INFO] performing experiments sequentially\n[MainProcess/INFO] 1 cases completed\n[MainProcess/INFO] 2 cases completed\n[MainProcess/INFO] 3 cases completed\n[MainProcess/INFO] 4 cases completed\n[MainProcess/INFO] 5 cases completed\n[MainProcess/INFO] 6 cases completed\n[MainProcess/INFO] 7 cases completed\n[MainProcess/INFO] 8 cases completed\n[MainProcess/INFO] 9 cases completed\n[MainProcess/INFO] 10 cases completed\n[MainProcess/INFO] 11 cases completed\n[MainProcess/INFO] 12 cases completed\n[MainProcess/INFO] 13 cases completed\n[MainProcess/INFO] 14 cases completed\n[MainProcess/INFO] 15 cases completed\n[MainProcess/INFO] 16 cases completed\n[MainProcess/INFO] 17 cases completed\n[MainProcess/INFO] 18 cases completed\n[MainProcess/INFO] 19 cases completed\n[MainProcess/INFO] 20 cases completed\n[MainProcess/INFO] 21 cases completed\n[MainProcess/INFO] 22 cases completed\n[MainProcess/INFO] 23 cases completed\n[MainProcess/INFO] 24 cases completed\n[MainProcess/INFO] 25 cases completed\n[MainProcess/INFO] 26 cases completed\n[MainProcess/INFO] 27 cases completed\n[MainProcess/INFO] 28 cases completed\n[MainProcess/INFO] 29 cases completed\n[MainProcess/INFO] 30 cases completed\n[MainProcess/INFO] 31 cases completed\n[MainProcess/INFO] 32 cases completed\n[MainProcess/INFO] 33 cases completed\n[MainProcess/INFO] 34 cases completed\n[MainProcess/INFO] 35 cases completed\n[MainProcess/INFO] 36 cases completed\n[MainProcess/INFO] 37 cases completed\n[MainProcess/INFO] 38 cases completed\n[MainProcess/INFO] 39 cases completed\n[MainProcess/INFO] 40 cases completed\n[MainProcess/INFO] 41 cases completed\n[MainProcess/INFO] 42 cases completed\n[MainProcess/INFO] 43 cases completed\n[MainProcess/INFO] 44 cases completed\n[MainProcess/INFO] 45 cases completed\n[MainProcess/INFO] 46 cases completed\n[MainProcess/INFO] 47 cases completed\n[MainProcess/INFO] 48 cases completed\n[MainProcess/INFO] 49 cases completed\n[MainProcess/INFO] 50 cases completed\n[MainProcess/INFO] experiments finished\n"
+    }
+   ],
    "source": [
     "## run experiment netlogo\n",
     "\n",
@@ -255,9 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'pysd_model' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-e8702e57d895>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m## run pysd experiment\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mSequentialEvaluator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpysd_model\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mevaluator\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mresults\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mperform_experiments\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpysd_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreporting_interval\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevaluator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mevaluator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pysd_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "## run pysd experiment\n",
     "\n",
@@ -297,15 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "[MainProcess/INFO] performing 50 scenarios * 1 policies * 1 model(s) = 50 experiments\n[MainProcess/INFO] performing experiments sequentially\n[MainProcess/INFO] 5 cases completed\n[MainProcess/INFO] 10 cases completed\n[MainProcess/INFO] 15 cases completed\n[MainProcess/INFO] 20 cases completed\n[MainProcess/INFO] 25 cases completed\n[MainProcess/INFO] 30 cases completed\n[MainProcess/INFO] 35 cases completed\n[MainProcess/INFO] 40 cases completed\n[MainProcess/INFO] 45 cases completed\n[MainProcess/INFO] 50 cases completed\n[MainProcess/INFO] experiments finished\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# run the experiments python\n",
     "from ema_workbench import (MultiprocessingEvaluator, SequentialEvaluator ,ema_logging,\n",
@@ -344,15 +362,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "[MainProcess/INFO] pool started\n[MainProcess/INFO] performing 50 scenarios * 1 policies * 2 model(s) = 100 experiments\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## mulitprocessing multiple models\n",
     "\n",
@@ -369,27 +381,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(200, 7)\n['predators', 'prey']\n{'predators': array([[[20.        , 20.42316174, 20.854921  , ...,  1.14153306,\n          1.13926572,  1.13707336]],\n\n       [[20.        , 20.64767142, 21.30833698, ...,  1.06022122,\n          1.04806204,  1.03605171]],\n\n       [[20.        , 20.38542412, 20.77716573, ..., 31.82550692,\n         31.50361359, 31.18376571]],\n\n       ...,\n\n       [[20.        , 20.25694827, 20.51367625, ...,  1.41138377,\n          1.41296784,  1.41465067]],\n\n       [[20.        , 20.59224282, 21.19725329, ...,  0.20127946,\n          0.20025406,  0.19924589]],\n\n       [[20.        , 20.17202061, 20.34550404, ..., 36.79056003,\n         36.93828501, 37.08265229]]]), 'prey': array([[[50.        , 49.97700707, 49.94880153, ..., 19.45182821,\n         19.53348278, 19.61549106]],\n\n       [[50.        , 49.57706279, 49.13509205, ...,  2.0104741 ,\n          2.02028184,  2.03015472]],\n\n       [[50.        , 49.92195245, 49.83520277, ...,  7.88374974,\n          7.82868874,  7.77516797]],\n\n       ...,\n\n       [[50.        , 49.62461549, 49.24277987, ..., 24.6808292 ,\n         24.82904789, 24.9781281 ]],\n\n       [[50.        , 49.75387527, 49.49440342, ..., 13.12281827,\n         13.18659009, 13.25067851]],\n\n       [[50.        , 49.99782639, 49.99189338, ..., 37.97849695,\n         37.69810558, 37.41735003]]])}\n"
+     "text": "(50, 7)\n['predators', 'prey']\n{'predators': array([[[20.        , 20.02864784, 20.05468535, ...,  2.10353838,\n          2.0900741 ,  2.07673144]],\n\n       [[20.        , 20.21612445, 20.43574092, ..., 21.54869453,\n         21.40077224, 21.25408688]],\n\n       [[20.        , 20.61840443, 21.24999425, ...,  1.04649058,\n          1.03747007,  1.02860463]],\n\n       ...,\n\n       [[20.        , 20.04345978, 20.08447236, ...,  2.36919127,\n          2.35707488,  2.34509182]],\n\n       [[20.        , 20.34114924, 20.68248664, ...,  1.22204159,\n          1.21037717,  1.19886522]],\n\n       [[20.        , 20.14315219, 20.28495979, ...,  4.39797485,\n          4.39249087,  4.38732262]]]), 'prey': array([[[50.        , 49.5028549 , 49.00961991, ..., 20.58256053,\n         20.64621432, 20.71026744]],\n\n       [[50.        , 50.12717654, 50.25190157, ..., 10.71721519,\n         10.74022336, 10.76368787]],\n\n       [[50.        , 49.71098527, 49.40248994, ..., 10.30546103,\n         10.38028245, 10.45571153]],\n\n       ...,\n\n       [[50.        , 49.63086889, 49.26318519, ..., 28.78734605,\n         28.87548346, 28.96409797]],\n\n       [[50.        , 49.6074519 , 49.20737169, ..., 12.27694409,\n         12.32514418, 12.37362367]],\n\n       [[50.        , 49.77746158, 49.55209878, ..., 34.09841123,\n         34.23146107, 34.36513056]]])}\n"
     },
     {
      "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "If using all scalar values, you must pass an index",
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-6205d8cc96ca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m#print(\"set policy\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutcomes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;31m#print(\"created df\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'policy'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolicies\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    433\u001b[0m             )\n\u001b[0;32m    434\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 435\u001b[1;33m             \u001b[0mmgr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minit_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    436\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMaskedArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    437\u001b[0m             \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmrecords\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmrecords\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36minit_dict\u001b[1;34m(data, index, columns, dtype)\u001b[0m\n\u001b[0;32m    252\u001b[0m             \u001b[0marr\u001b[0m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mis_datetime64tz_dtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0marr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0marrays\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    253\u001b[0m         ]\n\u001b[1;32m--> 254\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0marrays_to_mgr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata_names\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    255\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    256\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, arr_names, index, columns, dtype)\u001b[0m\n\u001b[0;32m     62\u001b[0m     \u001b[1;31m# figure out the index, if necessary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marrays\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[0mindex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mensure_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\pandas\\core\\internals\\construction.py\u001b[0m in \u001b[0;36mextract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    353\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    354\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mindexes\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mraw_lengths\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 355\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"If using all scalar values, you must pass an index\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    356\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    357\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhave_series\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: If using all scalar values, you must pass an index"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-98bc822fa887>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m#print(\"created df\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'policy'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpolicies\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;31m#print(\"added policy to df\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;31m#print(data)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
@@ -397,6 +405,9 @@
     "import matplotlib.pyplot as plt # TO DO; plot the scalers.\n",
     "import pandas as pd\n",
     "import seaborn as sns; sns.set(style=\"ticks\", color_codes=True)\n",
+    "\n",
+    "experiments, outcomes = results\n",
+    "\n",
     "print(experiments.shape)\n",
     "print(list(outcomes.keys()))\n",
     "print(outcomes)\n",
@@ -404,7 +415,12 @@
     "#print(policies)\n",
     "#print(\"set policy\")\n",
     "\n",
-    "data = pd.DataFrame(outcomes)\n",
+    "data = (pd.DataFrame([outcomes]), type == object)\n",
+    "#df = pd.DataFrame.from_records([outcomes], index = [0])\n",
+    "\n",
+    "#pd.Series(data).to_frame()\n",
+    "\n",
+    "\n",
     "#print(\"created df\")\n",
     "data['policy'] = policies\n",
     "#print(\"added policy to df\")\n",
@@ -460,13 +476,20 @@
     "#     plotting.lines(experiments, outcomes, outcomes_to_show=outcome, density=plotting_util.Density.HIST)\n",
     "# plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38264bitc695bbccf217448cbeb1e12ff6afe318"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
