WIP: First commit assignment 8

--- a/Week 5-6 - robustness and direct search/assignment 8 - MORDM.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 8 - MORDM.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -81,7 +81,43 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from dps_lake_model import lake_model\n",
+    "\n",
+    "from ema_workbench import (Model, RealParameter, ScalarOutcome,\n",
+    "                           MultiprocessingEvaluator, ema_logging,\n",
+    "                           Constant)\n",
+    "\n",
+    "ema_logging.log_to_stderr(ema_logging.INFO)\n",
+    "\n",
+    "#instantiate the model\n",
+    "lake_model = Model('lakeproblem', function=lake_model)\n",
+    "lake_model.time_horizon = 100 # used to specify the number of timesteps\n",
+    "\n",
+    "#specify uncertainties\n",
+    "lake_model.uncertainties = [RealParameter('mean', 0.01, 0.05),\n",
+    "                            RealParameter('stdev', 0.001, 0.005),\n",
+    "                            RealParameter('b', 0.1, 0.45),\n",
+    "                            RealParameter('q', 2.0, 4.5),\n",
+    "                            RealParameter('delta', 0.93, 0.99)]\n",
+    "\n",
+    "# set levers, one for each time step\n",
+    "lake_model.levers = [RealParameter('c1', -2, 2),\n",
+    "                     RealParameter('c2', -2, 2),\n",
+    "                     RealParameter('r1', 0, 2),\n",
+    "                     RealParameter('r2', 0, 2),\n",
+    "                     RealParameter('w1', 0, 1)]\n",
+    "\n",
+    "#specify outcomes \n",
+    "lake_model.outcomes = [ScalarOutcome('max_P', kind=ScalarOutcome.MINIMIZE),\n",
+    "                       ScalarOutcome('utility', kind=ScalarOutcome.MAXIMIZE),\n",
+    "                       ScalarOutcome('inertia', kind=ScalarOutcome.MAXIMIZE),\n",
+    "                       ScalarOutcome('reliability', kind=ScalarOutcome.MAXIMIZE)]\n",
+    "\n",
+    "lake_model.constants = [Constant('alpha', 0.4),\n",
+    "                            Constant('nsamples', 100),\n",
+    "                            Constant('myears', 100)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2-final"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
