in reply to hongxuan ;P

--- a/Week 5-6 - robustness and direct search/assignment 8 - MORDM.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 8 - MORDM.ipynb
@@ -762,7 +762,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "idk why I couldn;'t run this cell when I changed policies[0] to polices"
+    "idk why I couldn;'t run this cell when I changed policies[0] to polices\n",
+    "I also dont know, but this cell does make sure to input all policies into policies instead of just the first one. And i think you cannot run policies with multiple predefined ones. Although i am not sure? lets ask. \n"
    ]
   },
   {
